add: product category api with its seeder class and api documentation
