# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\API\AuthAPIController;
 use App\Http\Controllers\API\CompanyInfoAPIController;
+use App\Http\Controllers\API\ProductCategoryAPIController;
 use App\Http\Controllers\API\RawMaterialCategoryAPIController;
 use App\Http\Controllers\API\UserAPIController;
 use App\Http\Controllers\API\WarehouseAPIController;
@@ -60,6 +61,14 @@ Route::middleware(['auth:api', 'role:ADMIN'])->group(function () {
         Route::get('/{id}', [RawMaterialCategoryAPIController::class, 'show']);
         Route::post('/', [RawMaterialCategoryAPIController::class, 'store']);
         Route::patch('/{id}', [RawMaterialCategoryAPIController::class, 'update']);
+    });
+
+
+    Route::prefix('product-categories')->group(function () {
+        Route::get('/', [ProductCategoryAPIController::class, 'index']);
+        Route::get('/{id}', [ProductCategoryAPIController::class, 'show']);
+        Route::post('/', [ProductCategoryAPIController::class, 'store']);
+        Route::patch('/{id}', [ProductCategoryAPIController::class, 'update']);
     });
 
 });
